2014-09-05  Geoffrey Garen  <ggaren@apple.com>

        Rolled out <http://trac.webkit.org/changeset/173313>.

        It seems to have broken the PLT bot.

                Do the bmalloc.
                https://bugs.webkit.org/show_bug.cgi?id=132629

                * wtf/FastMalloc.cpp:

2014-06-06  Jer Noble  <jer.noble@apple.com>

        Refactoring: make MediaTime the primary time type for audiovisual times.
        https://bugs.webkit.org/show_bug.cgi?id=133579

        Reviewed by Eric Carlson.

        Add a unary minus operator, and add unimplemented private casting operators, to make
        unintentional double->MediaTime and MediaTime->double casts hard errors.

        * wtf/MediaTime.cpp:
        (WTF::MediaTime::operator-):
        * wtf/MediaTime.h:

2014-09-04  Geoffrey Garen  <ggaren@apple.com>

        Do the bmalloc.
        https://bugs.webkit.org/show_bug.cgi?id=132629

        Reviewed by Michael Saboff.

        64-bit only for now, just to try it out.

        * wtf/FastMalloc.cpp:

2014-09-05  Dániel Bátyai  <dbatyai.u-szeged@partner.samsung.com>

        Enable GenGC on ARM Traditional
        https://bugs.webkit.org/show_bug.cgi?id=136567

        Reviewed by Csaba Osztrogonác.

        * wtf/Platform.h:

2014-09-04  Filip Pizlo  <fpizlo@apple.com>

        Beef up the DFG's CFG analyses to include iterated dominance frontiers and more user-friendly BlockSets
        https://bugs.webkit.org/show_bug.cgi?id=136520

        Fix bug found in Geoff's review but not landed in previous commit.

        * wtf/BitVector.cpp:
        (WTF::BitVector::equalsSlowCaseFast): return true.

2014-09-03  Filip Pizlo  <fpizlo@apple.com>

        Beef up the DFG's CFG analyses to include iterated dominance frontiers and more user-friendly BlockSets
        https://bugs.webkit.org/show_bug.cgi?id=136520

        Reviewed by Geoffrey Garen.
        
        Give BitVector a way to quickly find the next set (or unset) bit. Make BitVector equality